# attractor

./: .gitignore  README.md  pyproject.toml
attractor/: __init__.py  cli.py
attractor/agent/: __init__.py  loop.py
attractor/core/: conditions.py  context.py  engine.py  graph.py  handlers.py  outcome.py
attractor/unified_llm/: client.py  models.py  providers.py
tests/: test_engine.py
